package menuprincipal.battleship.bateau;

public enum TailleBateau {
    DEUX,
    TROIS,
    QUATRE,
    CINQ
}
