package menuprincipal.battleship.joueur;

public class IADebutant {
}
