package menuprincipal.battleship.joueur;

import javafx.util.Pair;

public abstract class Joueur {
    public Pair<Double, Double> determinerTir() {
        Pair<Double, Double> tir = null;
        return null;
    }

    public Pair<Double, Double> demanderTir() {
        Pair<Double, Double> tir = null;
        return null;
    }

    public void demanderPlacerBateau() {

    }

    public void determinerPlacerBateau() {

    }
}
