package menuprincipal.battleship.joueur;

public class Personne {
}
