package menuprincipal.battleship.plateau;

public enum Tir {
        AUCUN,
        RATE,
        TOUCHE,
        COULE
}
