package menuprincipal.controlleurs;

import menuprincipal.jeu.Jeu;

public class EnregistreurPartie {
    static void enregistrerPartie(String nomFichier, Jeu jeu) {

    }
}
