package menuprincipal.controlleurs;

import javafx.util.Pair;
import menuprincipal.battleship.plateau.Plateau;
import menuprincipal.battleship.plateau.PlateauBateau;
import menuprincipal.battleship.plateau.PlateauTir;

public class VisualiseurPartie {
    private String [] timelinePlateau;

    public void visualiserPartie(Pair<PlateauBateau, PlateauTir> pair) {

    }

    public void ajouterEtape(Plateau plateau) {

    }
}
