package menuprincipal.jeu;

import lombok.Data;
import javafx.util.Pair;
import menuprincipal.battleship.plateau.Plateau;

@Data
public class Jeu {
    static void jouer() {

    }

    private void determinerModeJeu() {
        //
    }

    private void actualiserPlateau(Pair<Double, Double> pair, Plateau plateau) {

    }

    private void effectuerProchaintour() {

    }

    private void determinerGagnant() {}
}
